io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/inconsistentpayable2/Sub.java
package io.hotmoka.examples.errors.inconsistentpayable2;

import io.takamaka.code.lang.FromContract;
import io.takamaka.code.lang.Payable;

public class Sub extends Super {
	public @Payable @FromContract void m() {}
}